public abstract class Animal 
{
    public virtual void PlayAnimalSound() 
    {
        Console.WriteLine("The animal makes a sound");
    }
}
