namespace PretendUnity{
    public class MonoBehaviour{
        public void Start(){

        }
        public void Update(){
            
        }
    }
}